# ledgerbase

./: .bandit  .coverage  .dockerignore  .editorconfig  .env.example  .envrc  .flake8  .gitattributes  .gitguardian.yaml  .gitignore  .gitleaks.toml  .hadolint.yaml  .markdownlint.jsonc  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  .secrets.baseline  .secretsignore  .semgrepignore  .snyk  .sops.yaml  .taplo.toml  .trivyignore  .trufflehog.toml  .vale.ini  .yamllint  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  bandit-results.json  check-system.sh  codecov.yml  (+24 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  ci-failure-report.md
.github/scripts/: pr-status-summary.js
.github/workflows/: auto-approve.yml  auto-merge.yml  cd.yml  ci.yml  cifuzzy.yml  daily-check.yml  dependency-review.yml  deploy.yml  dev-checks.yml  docker-template.yml  generate-matrix.yml  gh-pages.yml  license-scan.yml  license.yml  lint-matrix.yml  nox-template-matrix.yml  nox-template.yml  pre-commit.yml  prepare-poetry.yml  python-template-pip.yml  release.yml  safety.yml  sbom.yml  scorecard.yml  security-bandit.yml  security-codeql.yml  security-deps-audit.yml  security-pip-audit.yml  security-safety.yml  security-secrets-full.yml  security-secrets-pr.yml  security-secrets.yml  security-semgrep.yml  security-snyk.yml  security-suite.yml  security-trivy.yml  semgrep.yml  snyk.yml  stale.yml  status-summary.yml  (+4 more)
.github/workflows/automation/: auto-approve.yml
.github/workflows/cd/: auto-merge.yml  deploy.yml
.github/workflows/ci/: daily-check.yml  dev-checks.yml  generate-matrix.yml  pre-commit.yml  python-version-matrix.yml  security-checks.yml  test-matrix.yml
.github/workflows/compliance/: license.yml  sbom.yml
.github/workflows/security/: safety.yml  security-bandit.yml  security-codeql.yml  security-pip-audit.yml  security-semgrep.yml  security-snyk.yml  security-trivy.yml
.github/workflows/templates/: assured-oss-auth.yml  dev-checks.yml  docker-template.yml  generate-matrix.yml  license.yml  lint-matrix.yml  nox-template-matrix.yml  nox-template.yml  pre-commit.yml  prepare-poetry.yml  python-template-pip.yml  safety.yml  sbom.yml  security-bandit.yml  security-checks.yml  security-pip-audit.yml  security-semgrep.yml  test-matrix.yml
LICENSES/: MIT.txt
app/: __init__.py  config.py  error_handlers.py  models.py  security.py
docs/: WTD-Runbook.md  annotation_spec.md  project-index.md  requirements-update.md  semantic_release.md  setup-instructions.md
docs/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md
docs/reports/json/: disallowed-licenses.txt
docs/reports/xml/: coverage.xml
docs/reviews/: review_request_template.md
docs/source/: conf.py  index.rst
docs/source/_templates/: config_template.rst.j2  config_template.rst.j2:Zone.Identifier  file_template.rst.j2  narrative_module.rst.j2  narrative_module.rst.j2:Zone.Identifier  python_template.rst.j2  python_template.rst.j2:Zone.Identifier  script_template.rst.j2  script_template.rst.j2:Zone.Identifier
docs/source/rst/dev/: config_types.rst  noxfile.rst
docs/source/rst/dev/scripts/: check-system.rst  config_types.rst  decrypt_env.rst  encrypt_env.rst  generate_requirements.rst  index.rst  validate_env_keys.rst
docs/source/rst/wiki/: developer_doc_system.rst  index.rst
docs/uml/: LedgerBaseSchema.puml  artifacts.puml  cd.puml  ci.puml  ledgerbase-ci-cd.puml  scripts.puml  workflows-overview.puml
docs/wiki/: LedgerBase_Phase_Overview.md  SECURITY.md
mirrors-isort/: setup.py
scripts/: check_front_matter.py  check_requirements.py  check_semgrep_bundles.sh  comment_violations.py  convert_headers.py  file_checks.sh  find_unannotated_files.py  fix_metadata_noqa.py  generate_file_docs.py  generate_license_report.py  generate_master_index.py  generate_review_request.py  generate_script_docs.py  lint-md.txt  lint-yaml.txt  parse_and_render.py  run_license_report.py  run_semgrep_ci.py  unannotated_files.csv  validate_assuredoss.py  validate_file_headers.py
semgrep/: run_semgrep_modular.py
semgrep/api/: semgrep.yml
semgrep/cli/: semgrep.yml
semgrep/configs/: semgrep.yml
semgrep/docs/: semgrep.yml
semgrep/github/: semgrep.yml
semgrep/lib/: semgrep.yml
semgrep/other/: semgrep.yml
semgrep/scripts/: semgrep.yml
semgrep/semgrep/: semgrep.yml
semgrep/tests/: semgrep.yml
services/: plaid_service.py
src/flask/: Dockerfile
src/ledgerbase/: __init__.py  config.py  error_handlers.py  models.py  security.py
src/schema/: init.sql
src/scripts/: generate_review_request.py
src/services/: plaid_service.py
templates/: 404.html  422.html  500.html
tests/: config_test.py  error_handlers_test.py  models_test.py  security_test.py  wsgi_test.py
